--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gambling Simulator</title>
+    <title>Bloxzee - Games</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -225,11 +225,11 @@
 
     <!-- Left Navigation -->
     <div class="left-nav">
-        <div class="logo">G.<span>SITE</span></div>
-        <a href="#">Games</a>
-        <a href="#">Funds</a>
-        <a href="#">Promotions</a>
-        <a href="#">About</a>
+        <div class="logo">BLOX<span>ZEE</span></div>
+        <a href="/index">Games</a>
+        <a href="/funds">Funds</a>
+        <a href="/promo">Promotions</a>
+        <a href="/about">About</a>
     </div>
 
     <!-- Main Content -->
@@ -261,7 +261,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        © 2025 Gambling Simulator. All Rights Reserved.
+        © 2025 Bloxzee All Rights Reserved.
     </div>
 
 </body>
