--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <!-- Left Navigation -->
     <div class="left-nav">
         <div class="logo">BLOX<span>ZEE</span></div>
-        <a href="/index">Games</a>
+        <a href="/">Games</a>
         <a href="/funds">Funds</a>
         <a href="/promo">Promotions</a>
         <a href="/about">About</a>
