--- a/index.html
+++ b/index.html
@@ -184,6 +184,69 @@
             font-size: 14px;
             letter-spacing: 0.5px;
         }
+
+        /* Login Modal */
+        .login-modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .login-modal-content {
+            background-color: #161616;
+            padding: 40px;
+            border-radius: 10px;
+            width: 350px;
+            text-align: center;
+        }
+
+        .login-modal-content h2 {
+            color: #ffffff;
+            margin-bottom: 20px;
+        }
+
+        .login-modal-content input {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 20px;
+            background-color: #333333;
+            border: 2px solid #00ff88;
+            color: #ffffff;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+
+        .login-modal-content button {
+            width: 100%;
+            padding: 12px;
+            background-color: #00ff88;
+            border: none;
+            color: #0f0f0f;
+            font-weight: 600;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .login-modal-content button:hover {
+            background-color: #00cc66;
+        }
+
+        .close-modal {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            color: #ffffff;
+            font-size: 24px;
+            cursor: pointer;
+        }
+
     </style>
     <script>
         function formatNumber(num) {
@@ -206,7 +269,24 @@
                     </div>
                     <a href="#" class="login" onclick="logout()">Logout</a>
                 `;
+            } else {
+                topNav.innerHTML = `
+                    <a href="#" class="login" onclick="openLoginModal()">Login</a>
+                `;
             }
+        }
+
+        function openLoginModal() {
+            document.querySelector('.login-modal').style.display = 'flex';
+        }
+
+        function closeLoginModal() {
+            document.querySelector('.login-modal').style.display = 'none';
+        }
+
+        function login() {
+            document.cookie = "money=0; path=/;";
+            location.reload();
         }
 
         function logout() {
@@ -220,7 +300,7 @@
 <body>
     <!-- Top Navigation -->
     <div class="top-nav">
-        <a href="/login" class="login">Login</a>
+        <a href="#" class="login" onclick="openLoginModal()">Login</a>
     </div>
 
     <!-- Left Navigation -->
@@ -256,6 +336,16 @@
                 <div class="amount"><img src="cash.svg" alt="Cash"> 2,000</div>
                 <div class="paid-out">PAID OUT</div>
             </div>
+        </div>
+    </div>
+
+    <!-- Login Modal -->
+    <div class="login-modal">
+        <div class="login-modal-content">
+            <span class="close-modal" onclick="closeLoginModal()">X</span>
+            <h2>Login</h2>
+            <input type="password" id="keyInput" placeholder="Enter Key">
+            <button onclick="login()">Login</button>
         </div>
     </div>
 
