--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             border-radius: 10px;
             width: 350px;
             text-align: center;
+            position: relative;
         }
 
         .login-modal-content h2 {
@@ -212,7 +213,7 @@
         }
 
         .login-modal-content input {
-            width: 100%;
+            width: 92%;
             padding: 12px;
             margin-bottom: 20px;
             background-color: #333333;
