--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         .close-modal {
             position: absolute;
             top: -2px;
-            right: 10px;
+            right: 13px;
             color: #ffffff;
             font-size: 24px;
             cursor: pointer;
@@ -343,7 +343,7 @@
     <!-- Login Modal -->
     <div class="login-modal">
         <div class="login-modal-content">
-            <span class="close-modal" onclick="closeLoginModal()">X</span>
+            <span class="close-modal" onclick="closeLoginModal()">x</span>
             <h2>Login</h2>
             <input type="password" id="keyInput" placeholder="Enter Key">
             <button onclick="login()">Login</button>
