--- a/index.html
+++ b/index.html
@@ -326,16 +326,16 @@
         <h1>Statistics</h1>
         <div class="counter">
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash"> 1,000</div>
-                <div class="paid-out">PAID OUT</div>
+                <div class="amount"><img src="cash.svg" alt="Cash">1,000,000</div>
+                <div class="paid-out">PAID OUT GLOBALLY</div>
             </div>
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash"> 500</div>
-                <div class="paid-out">PAID OUT</div>
+                <div class="amount"><img src="cash.svg" alt="Cash">250,000</div>
+                <div class="paid-out">PAID OUT WEEKLY</div>
             </div>
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash"> 2,000</div>
-                <div class="paid-out">PAID OUT</div>
+                <div class="amount"><img src="cash.svg" alt="Cash"> 18,000</div>
+                <div class="paid-out">PAID OUT DAILY</div>
             </div>
         </div>
     </div>
