--- a/games/pvp.html
+++ b/games/pvp.html
@@ -6,12 +6,7 @@
     <title>PvP Game Mode</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            margin: 0;
-            font-family: 'Poppins', sans-serif;
-            background-color: #0f0f0f;
-            color: #ffffff;
-        }
+        /* Add your existing styles here */
 
         /* Top Navigation */
         .top-nav {
@@ -101,94 +96,6 @@
             text-align: center;
         }
 
-        /* Profiles */
-        .profiles {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 30px;
-        }
-
-        .profile {
-            position: relative;
-            width: 150px;
-            height: 150px;
-            margin: 0 20px;
-            border-radius: 50%;
-            background-color: #333333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-        }
-
-        .profile img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: filter 0.3s ease;
-        }
-
-        .profile span {
-            position: absolute;
-            color: #ffffff;
-            font-size: 20px;
-            font-weight: bold;
-        }
-
-        .vs {
-            font-size: 30px;
-            color: #ffffff;
-            font-weight: bold;
-            margin: 0 10px;
-        }
-
-        .vs .green {
-            color: #00ff88;
-        }
-
-        .bet-section {
-            margin-top: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .bet-input {
-            width: 120px;
-            padding: 10px;
-            background-color: #333333;
-            border: 2px solid #00ff88;
-            color: #ffffff;
-            font-size: 16px;
-            text-align: center;
-            border-radius: 5px;
-        }
-
-        .bet-button {
-            padding: 10px 20px;
-            background-color: #00ff88;
-            color: #0f0f0f;
-            border: none;
-            font-weight: 600;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            margin-left: 10px;
-        }
-
-        .bet-button:disabled {
-            background-color: #666666;
-            cursor: not-allowed;
-        }
-
-        .countdown {
-            margin-top: 20px;
-            font-size: 20px;
-            color: #00ff88;
-            font-weight: bold;
-        }
-
         /* Footer */
         .footer {
             background-color: #161616;
@@ -204,91 +111,67 @@
 
     </style>
     <script>
-        let currentMoney;
+        let currentMoney = 1000; // Initial money for the player
+        let betPlaced = false;
 
+        // Function to format numbers with commas
         function formatNumber(num) {
             return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
         }
 
-        // Get money from cookie
-        function getMoneyFromCookie() {
-            const cookieValue = document.cookie.split('; ').find(row => row.startsWith('money='));
-            return cookieValue ? parseInt(cookieValue.split('=')[1]) : 1000; // Default to 1000 if not set
-        }
-
-        // Set money in cookie
-        function setMoneyInCookie(value) {
-            document.cookie = `money=${value}; path=/; max-age=31536000`; // 1 year expiration
-        }
-
-        let winner = null;  // Tracks who the winner is (1 or 2)
-        let betPlaced = false;  // To check if a bet has been placed
-        let countdownTimer = null;
-
-        // Update the displayed money
+        // Update the money display in the top nav
         function updateMoneyDisplay() {
-            const formattedMoney = formatNumber(currentMoney);
-            document.querySelector('.money-counter span').textContent = formattedMoney;
+            document.querySelector('.money-counter span').textContent = formatNumber(currentMoney);
         }
 
-        // Handle the bet logic
+        // Check if a bet is valid and place it
         function placeBet() {
-            if (betPlaced) return; // Prevent placing another bet while one is in progress
-
             const betAmount = parseInt(document.querySelector('#betAmount').value);
             if (isNaN(betAmount) || betAmount <= 0 || betAmount > currentMoney) {
-                alert("Please enter a valid bet amount.");
+                alert('Invalid bet amount.');
                 return;
             }
+
+            currentMoney -= betAmount;
+            updateMoneyDisplay();
 
             betPlaced = true;
             document.querySelector('.bet-button').disabled = true;
             document.querySelector('.bet-button').classList.add('disabled');
+
+            // Start the countdown
             startCountdown();
-
-            // Generate a random outcome (1 or 2)
-            const outcome = Math.floor(Math.random() * 2) + 1;
-
-            setTimeout(() => {
-                handleOutcome(outcome, betAmount);
-            }, 3000);  // Wait for the countdown to complete before determining the outcome
         }
 
-        // Handle the outcome based on the random result
-        function handleOutcome(outcome, betAmount) {
-            // Reset winner PFP
-            document.querySelector('.profile.winner')?.classList.remove('winner');
-            if (outcome === 1) {
-                // You lose
-                currentMoney -= betAmount;
-                setMoneyInCookie(currentMoney); // Update the cookie value
-                document.querySelector('.profile:nth-child(2)').classList.add('winner');
-                alert("You lost the bet!");
-            } else {
-                // You win
-                currentMoney += betAmount;
-                setMoneyInCookie(currentMoney); // Update the cookie value
-                document.querySelector('.profile:nth-child(1)').classList.add('winner');
-                alert("You won the bet!");
-            }
-
-            winner = outcome;
-            updateMoneyDisplay();
-            resetBet();
-        }
-
-        // Start the countdown for the bet
+        // Countdown timer
         function startCountdown() {
-            let countdownValue = 3;
+            let countdown = 10;
             const countdownDisplay = document.querySelector('.countdown');
-            countdownDisplay.textContent = `Betting in: ${countdownValue}`;
-            countdownTimer = setInterval(() => {
-                countdownValue--;
-                countdownDisplay.textContent = `Betting in: ${countdownValue}`;
-                if (countdownValue === 0) {
-                    clearInterval(countdownTimer);
+            countdownDisplay.textContent = `Betting in: ${countdown}`;
+            const countdownInterval = setInterval(() => {
+                countdown--;
+                countdownDisplay.textContent = `Betting in: ${countdown}`;
+                if (countdown === 0) {
+                    clearInterval(countdownInterval);
+                    determineWinner();
                 }
             }, 1000);
+        }
+
+        // Function to determine the winner and update the money
+        function determineWinner() {
+            const winner = Math.random() < 0.5 ? 'player' : 'opponent';
+            const betAmount = parseInt(document.querySelector('#betAmount').value);
+
+            if (winner === 'player') {
+                currentMoney += betAmount * 2; // Player wins, doubles the bet
+                alert('You won!');
+            } else {
+                alert('You lost!');
+            }
+
+            updateMoneyDisplay();
+            resetBet();
         }
 
         // Reset the bet section after a round
@@ -304,7 +187,6 @@
 
         // Initialize the money and cookie on page load
         window.onload = () => {
-            currentMoney = getMoneyFromCookie();
             updateMoneyDisplay();
         };
     </script>
@@ -313,18 +195,18 @@
     <!-- Top Navigation -->
     <div class="top-nav">
         <div class="money-counter">
-            <img src="money-icon.png" alt="Money" /> Money: 1000
+            <img src="money-icon.png" alt="Money" /> Money: <span>1000</span>
         </div>
         <a href="#" class="login" onclick="logout()">Logout</a>
     </div>
 
     <!-- Left Navigation -->
     <div class="left-nav">
-        <div class="logo">Game <span>Zone</span></div>
-        <a href="#">Home</a>
-        <a href="#">PvP Game Mode</a>
-        <a href="#">Leaderboard</a>
-        <a href="#">Settings</a>
+        <div class="logo">BLOX<span>ZEE</span></div>
+        <a href="/">Games</a>
+        <a href="/funds">Funds</a>
+        <a href="/promo">Promotions</a>
+        <a href="/about">About</a>
     </div>
 
     <!-- Main Content -->
