--- a/games/pvp.html
+++ b/games/pvp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PvP Game Mode</title>
+    <title>Bloxzee - PvP</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -187,7 +187,7 @@
         function updateMoneyDisplay() {
             const money = getMoney();
             if (money !== null) {
-                document.querySelector('.money-counter span').textContent = `cash.svg ${formatNumber(money)}`;
+                document.querySelector('.money-counter span').textContent = `${formatNumber(money)}`;
             } else {
                 window.location.href = "/"; // Redirect if no money cookie is found
             }
