--- a/games/pvp.html
+++ b/games/pvp.html
@@ -270,7 +270,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        © 2025 PvP Game Mode - All Rights Reserved.
+        © 2025 Bloxzee - All Rights Reserved.
     </div>
 
 </body>
