--- a/games/pvp.html
+++ b/games/pvp.html
@@ -154,7 +154,7 @@
             height: 80px;
         }
 
-        .vs {
+        .VS {
             font-size: 24px;
             color: #00ff88;
             align-self: center;
@@ -253,7 +253,7 @@
                     <img src="pfp.png" alt="Opponent" />
                 </div>
                 <div class="vs">
-                    VS <span class="green">S</span>
+                    V <span class="green">S</span>
                 </div>
                 <div class="profile">
                     <img src="pfp.png" alt="Opponent" />
