--- a/games/pvp.html
+++ b/games/pvp.html
@@ -154,7 +154,7 @@
             height: 80px;
         }
 
-        .VS {
+        .vs {
             font-size: 24px;
             color: #00ff88;
             align-self: center;
@@ -230,7 +230,7 @@
     <!-- Top Navigation -->
     <div class="top-nav">
         <div class="money-counter">
-            <img src="cash.svg" alt="Money" /> <span>cash.svg 1,000</span>
+            <img src="cash.svg" alt="Money" /> <span>0</span>
         </div>
         <a href="#" class="login" onclick="logout()">Logout</a>
     </div>
@@ -253,7 +253,7 @@
                     <img src="pfp.png" alt="Opponent" />
                 </div>
                 <div class="vs">
-                    V <span class="green">S</span>
+                    V<span class="green">S</span>
                 </div>
                 <div class="profile">
                     <img src="pfp.png" alt="Opponent" />
@@ -270,7 +270,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        © 2025 Bloxzee - All Rights Reserved.
+        © 2025 PvP Game Mode - All Rights Reserved.
     </div>
 
 </body>
