--- a/games/pvp.html
+++ b/games/pvp.html
@@ -230,7 +230,7 @@
     <!-- Top Navigation -->
     <div class="top-nav">
         <div class="money-counter">
-            <img src="cash.svg" alt="Money" /> <span>0</span>
+            <img src="cash.svg" alt="Money" /> <b>0</b>
         </div>
         <a href="#" class="login" onclick="logout()">Logout</a>
     </div>
