--- a/games/pvp.html
+++ b/games/pvp.html
@@ -25,7 +25,7 @@
 
         .top-nav .money-counter {
             color: #00ff88;
-            font-weight: 600;
+            font-weight: 600;  /* Ensures the text is bold */
             margin-right: 20px;
             display: flex;
             align-items: center;
@@ -230,7 +230,7 @@
     <!-- Top Navigation -->
     <div class="top-nav">
         <div class="money-counter">
-            <img src="cash.svg" alt="Money" /> <b>0</b>
+            <img src="cash.svg" alt="Money" /> <b><span>0</span></b>
         </div>
         <a href="#" class="login" onclick="logout()">Logout</a>
     </div>
