--- a/games/coin.html
+++ b/games/coin.html
@@ -98,6 +98,19 @@
             text-align: center;
         }
 
+        .game-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .coins-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 20px 0;
+        }
+
         .coin {
             display: inline-flex;
             justify-content: center;
@@ -109,7 +122,7 @@
             font-size: 24px;
             font-weight: 700;
             color: #ffffff;
-            margin: 20px;
+            margin: 0 20px;
             cursor: pointer;
             transition: border-color 0.3s;
         }
@@ -118,19 +131,29 @@
             border-color: #00ff88;
         }
 
+        .or-text {
+            font-size: 18px;
+            color: #ffffff;
+            margin: 0 20px;
+            align-self: center;
+        }
+
+        .bet-input-container {
+            position: relative;
+            margin-top: 20px;
+        }
+
         .bet-input {
-            padding: 10px;
+            padding: 10px 10px 10px 40px;
             font-size: 18px;
             border: 2px solid #00ff88;
             background-color: #333333;
             color: #ffffff;
             border-radius: 5px;
             width: 200px;
-            margin-top: 20px;
-            position: relative;
         }
 
-        .bet-input img {
+        .bet-input-container img {
             position: absolute;
             left: 10px;
             top: 50%;
@@ -160,13 +183,6 @@
             margin-top: 20px;
             font-size: 18px;
             font-weight: 600;
-        }
-
-        .or-text {
-            font-size: 18px;
-            color: #ffffff;
-            margin: 0 20px;
-            align-self: center;
         }
     </style>
     <script>
@@ -260,16 +276,16 @@
     <!-- Main Content -->
     <div class="main-content">
         <div class="game-container">
-            <div class="coin" onclick="selectCoin(this)">H</div>
-            <div class="or-text">OR</div>
-            <div class="coin" onclick="selectCoin(this)">T</div>
-            <div class="bet-section">
-                <div style="position: relative;">
-                    <input type="number" id="betAmount" class="bet-input" placeholder="Bet amount" />
-                    <img src="cash.svg" alt="Cash" style="position: absolute; left: 10px; top: 50%; transform: translateY(-50%);" />
-                </div>
-                <button class="bet-button" onclick="placeBet()">Bet</button>
+            <div class="coins-container">
+                <div class="coin" onclick="selectCoin(this)">H</div>
+                <div class="or-text">OR</div>
+                <div class="coin" onclick="selectCoin(this)">T</div>
             </div>
+            <div class="bet-input-container">
+                <img src="cash.svg" alt="Cash" />
+                <input type="number" id="betAmount" class="bet-input" placeholder="Enter your bet" />
+            </div>
+            <button class="bet-button" onclick="placeBet()">Bet</button>
             <div class="result-message"></div>
         </div>
     </div>
